objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Global - Manual Lead</fullName>
        <description>Lead created manually</description>
        <isActive>true</isActive>
        <values>
            <fullName>1 Waiting</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>2 Accepted-Mine%2FChannel</fullName>
        </values>
        <values>
            <fullName>3%2E1 Rejected-Invalid Contact</fullName>
        </values>
        <values>
            <fullName>3%2E1%2E1 Rejected-Invalid Contact-for the Account</fullName>
        </values>
        <values>
            <fullName>3%2E1%2E2 Rejected-Invalid Contact-Incorrect Email</fullName>
        </values>
        <values>
            <fullName>3%2E1%2E3 Rejected-Invalid Contact-Incorrect Phone Number</fullName>
        </values>
        <values>
            <fullName>3%2E11 Rejected-Duplicate</fullName>
        </values>
        <values>
            <fullName>3%2E12 Rejected-No Valid Project</fullName>
        </values>
        <values>
            <fullName>3%2E2 Rejected-Already oppty</fullName>
        </values>
        <values>
            <fullName>3%2E4 Rejected-Enterprise%2FNamed</fullName>
        </values>
        <values>
            <fullName>3%2E5 Rejected-Project Canceled</fullName>
        </values>
        <values>
            <fullName>3%2E6 Rejected-Lost to Competition</fullName>
        </values>
        <values>
            <fullName>3%2E7 Rejected-Not My Territory%2FAccount</fullName>
        </values>
        <values>
            <fullName>3%2E8 Rejected-No Cisco Response%28Admin Onl</fullName>
        </values>
        <values>
            <fullName>3%2E9 Rejected-No Customer Response</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NGCC Marketing Lead</fullName>
        <description>Marketing Lead Cycle for NGCC Project</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approval Pending</fullName>
        </values>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Cancel</fullName>
        </values>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>Marketing Qualified</fullName>
        </values>
        <values>
            <fullName>Marketing Unqualified</fullName>
        </values>
        <values>
            <fullName>New Prospect</fullName>
        </values>
        <values>
            <fullName>Picked for Routing</fullName>
        </values>
        <values>
            <fullName>Pre-Prospect</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Rejected by Sales</fullName>
        </values>
        <values>
            <fullName>Send to Sales</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>VDC Lead Process</fullName>
        <description>Creating the process for VDC lead Record Type.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed For Nurture</fullName>
        </values>
        <values>
            <fullName>Closed For Suppress</fullName>
        </values>
        <values>
            <fullName>New Prospect</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Send to Sales</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>eLeads</fullName>
        <description>APAC &amp; EMEA - integrated with eLeads</description>
        <isActive>true</isActive>
        <values>
            <fullName>1 Waiting</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>2 Accepted-Mine%2FChannel</fullName>
        </values>
        <values>
            <fullName>3%2E1 Rejected-Invalid Contact</fullName>
        </values>
        <values>
            <fullName>3%2E1%2E1 Rejected-Invalid Contact-for the Account</fullName>
        </values>
        <values>
            <fullName>3%2E1%2E2 Rejected-Invalid Contact-Incorrect Email</fullName>
        </values>
        <values>
            <fullName>3%2E1%2E3 Rejected-Invalid Contact-Incorrect Phone Number</fullName>
        </values>
        <values>
            <fullName>3%2E11 Rejected-Duplicate</fullName>
        </values>
        <values>
            <fullName>3%2E12 Rejected-No Valid Project</fullName>
        </values>
        <values>
            <fullName>3%2E2 Rejected-Already oppty</fullName>
        </values>
        <values>
            <fullName>3%2E4 Rejected-Enterprise%2FNamed</fullName>
        </values>
        <values>
            <fullName>3%2E5 Rejected-Project Canceled</fullName>
        </values>
        <values>
            <fullName>3%2E6 Rejected-Lost to Competition</fullName>
        </values>
        <values>
            <fullName>3%2E7 Rejected-Not My Territory%2FAccount</fullName>
        </values>
        <values>
            <fullName>3%2E8 Rejected-No Cisco Response%28Admin Onl</fullName>
        </values>
        <values>
            <fullName>3%2E9 Rejected-No Customer Response</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AM_Email_Id__c</fullName>
        <label>AM Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Name_English__c</fullName>
        <description>Same as "Account Name (English)"</description>
        <label>Company (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <description>NGCC Phase1:SFDC Account Owner for account associated to contact.  Populated if call record is an existing contact in SFDC.</description>
        <label>Sales Account Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_English__c</fullName>
        <description>Lead Address Line 1, used for non-English profiles</description>
        <label>Address Line 1 (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>Lead Address Line 1</description>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_English__c</fullName>
        <description>Lead Address Line 2, used for non-English profiles</description>
        <label>Address Line 2 (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>Lead Address Line 2</description>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <description>NGCC Phase1:Prospect/Lead current Address Line 3</description>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias_Country_Email_Id__c</fullName>
        <label>contact center alias</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_phone_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Alternative phone opt in flag</description>
        <label>Alternate phone Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_phone_Status__c</fullName>
        <description>Alternative phone Status - Valid/Invalid/Null</description>
        <label>Alternate phone Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>InValid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_phone_number__c</fullName>
        <description>Alternative phone number</description>
        <label>Alternate phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_000__c</fullName>
        <description>LTLM-CurrentFYPotentialRevenue</description>
        <label>Annual Revenue ($000s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appointment_Cancel_Reason__c</fullName>
        <description>NGCC Phase1:Appointment cancel reason for prospect who has requested for appointment</description>
        <label>Appointment Cancel Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Date_Time__c</fullName>
        <description>Applicable for Lead type/lead category of Appointment. Date of  appointment with the partner</description>
        <label>Appointment Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appointment_Status__c</fullName>
        <description>NGCC Phase1:Appointment status for a prospect</description>
        <label>Appointment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Time_Zone__c</fullName>
        <description>NGCC Phase1:Appointment time zone for prospect</description>
        <label>Appointment Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Type__c</fullName>
        <description>Applicable for Lead type/lead category of Appointment. Type of appointment with the partner. 
Domain values:ONSITE
WEB"</description>
        <label>Appointment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ONSITE</fullName>
                </value>
                <value>
                    <fullName>WEB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assign_to_Partner_Days__c</fullName>
        <description>PLOC-Calculates the # days past since the lead has been assigned to a partner.
(Partner_Assigned_Date_Time__c- CreatedDate)</description>
        <formula>Partner_Assigned_Date_Time__c- CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TO_BE_DELETED_Assign to Partner (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assign_to_Partner__c</fullName>
        <description>PLOC/PGL- Not used</description>
        <formula>HYPERLINK("/servlet/servlet.Integration?lid=01N300000000PjF&amp;eid=" &amp; Id,"Assign to Partner")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TO_BE_DELETED_Assign to Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Partners_On_Account__c</fullName>
        <formula>End_Customer_Account__r.Allocated_Partner_1__c  + ';' +
End_Customer_Account__r.Allocated_Partner_2__c  + ';' +
End_Customer_Account__r.Allocated_Partner_3__c  + ';' +
End_Customer_Account__r.Allocated_Partner_4__c</formula>
        <label>Associated Partners On Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Relation_Status__c</fullName>
        <label>Business Relation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Stage__c</fullName>
        <description>Buyer Stage  used in Lead Prioritization</description>
        <label>Buyer Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awareness of Problem</fullName>
                </value>
                <value>
                    <fullName>Comparison of Solutions (Shortlist)</fullName>
                </value>
                <value>
                    <fullName>Consideration of Possible Solution (Researching)</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C3_Contract_Number__c</fullName>
        <description>C3 Contract Number</description>
        <label>C3 Contract Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCW_Deal_or_Quote_exist__c</fullName>
        <label>CCW Deal or Quote exist</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCW_Quote_ID__c</fullName>
        <inlineHelpText>CCW Quote ID has been auto-retrieved from CCW, no action needed. If partner provided deal id is not the same, please log a call and enter that quote id in the comments section</inlineHelpText>
        <label>CCW Quote ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Call_Priority__c</fullName>
        <description>NGCC CC Call Priority</description>
        <label>CC Call Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-High</fullName>
                </value>
                <value>
                    <fullName>2-Medium</fullName>
                </value>
                <value>
                    <fullName>3-Low</fullName>
                </value>
                <value>
                    <fullName>4-N/A</fullName>
                </value>
                <value>
                    <fullName>5-No Call Priority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CEC_ID__c</fullName>
        <description>This field is to populate the CECID from SourceFire system</description>
        <label>CEC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSCSiteID__c</fullName>
        <description>CSC ID
Cisco Standard Company ID – Unique identifier assigned to each Company ((Single Location (SL), Headquarters (HQ) or Global Ultimate (GU)), also known as CT ID (Company Target ID) when viewed in Customer Registry (ODM). Branches do not have their own unique CSC ID, they share the same CSC ID as the HQ or GU they link to.

Party ID
Customer Registry's Unique ID assigned to every Branch (Site) and Company (SL, HQ and GU). Unlike CSC IDs where Branches share same CSC ID as the HQ/GU they are link to, a unique Party ID is given to every record listed in CR. Think of this as a record locator or record identifier. In CR Parent ID and GU ID are simply the Party IDs for the Parent and GU records in the account hierarchy.

MYTH BUSTER: Sometimes Party ID and CSC ID match, are they the same? No, they are completely separate fields. Due to legacy data migration, these fields often contain the same numerical combination.</description>
        <label>CSC Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Back_Date_Time__c</fullName>
        <description>NGCC Phase1:Date/Time when Agent plans to call back contact</description>
        <label>Call Back Date_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Center_Vendor__c</fullName>
        <description>Call center vendor associated with the transaction. Value selected in SMCC application

Call Center Vendor</description>
        <label>Call Center Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Permission_Date__c</fullName>
        <description>NGCC Phase1:Date when the call permission was received</description>
        <label>Call Permission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Permission__c</fullName>
        <description>NGCC Phase1:Permission to call for marketing offers/promotion</description>
        <label>Call Permission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <description>NGCC Phase1:Call Status depending upon disposition value.  Can be only updated by system based on disposition.</description>
        <label>Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Call Back Later</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Invalid Call Completed</fullName>
                </value>
                <value>
                    <fullName>Max Attempts Reached</fullName>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                </value>
                <value>
                    <fullName>PE Cancelled/Completed</fullName>
                </value>
                <value>
                    <fullName>Call Completed</fullName>
                </value>
                <value>
                    <fullName>Requalification Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Code_Name__c</fullName>
        <formula>Campaign_Name__r.Campaign_Code__c &amp;" - "&amp;Campaign_Name__r.Campaign_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <description>NGCC Phase1:Unica Campaign code</description>
        <label>Campaign Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Description__c</fullName>
        <description>Marketing Program Description
LTLM SFDC Mapping
$Start/group/pfx:TRN__LEADS/CPGN__NAME</description>
        <label>Campaign Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Funding_Source__c</fullName>
        <description>NGCC Phase1:Unica's campaign Funding Source field</description>
        <label>Campaign Funding Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1:Unica Campaign name</description>
        <label>Campaign Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Eloqua_Campaign_Id__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Priority__c</fullName>
        <description>NGCC Phase1:Campaign priority for taking appropriate action</description>
        <label>Campaign Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_ID__c</fullName>
        <description>Channel Partner ID</description>
        <formula>Channel_Partner__r.Id</formula>
        <label>Channel Partner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Name__c</fullName>
        <description>Channel Partner Name</description>
        <formula>Channel_Partner__r.Name</formula>
        <label>Channel Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created for P360 2A development.</description>
        <label>Channel Partner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2)</booleanFilter>
            <errorMessage>The selected Partner is not a SCP registered active partner or is flagged on the Denied Partner List, please select a valid SCP registered partner.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Channel</value>
            </filterItems>
            <filterItems>
                <field>Account.Partner_Assignment_Eligible__c</field>
                <operation>greaterOrEqual</operation>
                <value>1</value>
            </filterItems>
            <infoMessage>This search will return only those partners enrolled in the Sales Collaboration Platform program. However, if you would like to reference accounts eligible for lead assignment, refer to the P360 Partners Enrolled link on the left hand side of the screen.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assigned Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chat_Bot_Transcript__c</fullName>
        <description>Creating this field to store NoHold Bot Transcripts.</description>
        <label>Chat Bot Transcript</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chat_Keycode__c</fullName>
        <label>Chat Keycode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Architecture__c</fullName>
        <inlineHelpText>Classification of Technology into Architecture Category</inlineHelpText>
        <label>Cisco Architecture</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cisco_Contact_Center_Manager1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1:Cisco Contact Center manager who will be approving a prospect when the prospect is of threshold value</description>
        <label>Cisco Contact Center Manager1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cisco_Contact_Center_Manager1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cisco_Contact_Center_Manager2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NGCC Phase1:Cisco Contact Center manager who will be approving a prospect when the prospect is of threshold value</description>
        <label>Cisco Contact Center Manager2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cisco_Contact_Center_Manager_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cisco_Notes_Activities__c</fullName>
        <description>PLOC/PAL -NOT USED
[rdavis@salesforce.com, 08/09/2006]: Created.</description>
        <label>TO_BE_DELETED_Cisco Notes/Activities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cisco_Order_ID__c</fullName>
        <inlineHelpText>Required if “Closed-Order Through Cisco” is selected. Please provide the Cisco Sales Order Number or Cisco Web Order ID as applicable.</inlineHelpText>
        <label>Cisco Sales/Web Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Owner__c</fullName>
        <description>PLOC/PAL - NOT USED
[rdavis@salesforce.com, 08/09/2006]: Created.</description>
        <label>TO_BE_DELETED_Cisco Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MIKAEL CARLSSON</fullName>
                </value>
                <value>
                    <fullName>GUNNEL HAGLIND</fullName>
                </value>
                <value>
                    <fullName>CLAES BRUSEFALT</fullName>
                </value>
                <value>
                    <fullName>SOFIA MELESKO</fullName>
                </value>
                <value>
                    <fullName>MARCUS HARTWALL</fullName>
                </value>
                <value>
                    <fullName>EDIT ILLES PEREDINE</fullName>
                </value>
                <value>
                    <fullName>AGNES MARKO</fullName>
                </value>
                <value>
                    <fullName>AGNES PECZE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cisco_Rec_PSR_Name__c</fullName>
        <description>Created as part of P360 Sep '12 Release.
Hold the Full Name of the Look Up Field "Cisco Recommended PSR" for Gadget.</description>
        <formula>Cisco_Rec_PSR__r.FirstName &amp; " " &amp; Cisco_Rec_PSR__r.LastName</formula>
        <label>Cisco Recommended PSR Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Rec_PSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cisco Recommended PSR</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Channel_Partner__c</valueField>
            </filterItems>
            <filterItems>
                <field>User.Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Channel_Partner__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_English__c</fullName>
        <description>Lead Address City, used for non-English profiles</description>
        <label>City (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Channel_Name__c</fullName>
        <inlineHelpText>Communication Channel used by Marketing Campaign</inlineHelpText>
        <label>Communication Channel Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Method__c</fullName>
        <description>NGCC Phase1:Preferred Communication method the custom would be preferred to be contacted by Cisco</description>
        <label>Communication Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Type__c</fullName>
        <description>PLOC/PAL - NOT USED
[rdavis@salesforce.com, 08/09/2006]: Created.</description>
        <label>TO_BE_DELETED_Communication Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyRegistrationNumber__c</fullName>
        <description>Legal Company (Account) Registration Number</description>
        <label>Company Registration Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compelling_Reason_To_Buy__c</fullName>
        <description>Compelling Reason To Buy</description>
        <label>Compelling Reason To Buy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirm_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(SLL Team Only) Confirm that a system assigned duplicate is correct to launch off confirmed duplicate activiites.</description>
        <label>Confirm Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Department__c</fullName>
        <description>Department of the contact</description>
        <label>Contact Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Engagement_Score__c</fullName>
        <description>NGCC Phase1:Sourced from MODS.  Can be used to help sort call queue order by Agents</description>
        <label>Contact Engagement Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Question__c</fullName>
        <description>NGCC Phase1:Source from GRS through ETL</description>
        <label>Contact Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Reason__c</fullName>
        <label>Contact Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Disposition_Sub_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Project</fullName>
                </value>
                <value>
                    <fullName>Replace/Upgrade</fullName>
                </value>
                <value>
                    <fullName>Optimize</fullName>
                </value>
                <value>
                    <fullName>Owns Cisco Equipment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lead Follow up</fullName>
                </value>
                <value>
                    <fullName>Mis-routed into Sales</fullName>
                </value>
                <value>
                    <fullName>Existing Account</fullName>
                </value>
                <value>
                    <fullName>Other/Unknown</fullName>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <description>NGCC Phase1:Current Prospect/Lead Contact status - Active/Inactive/NULL</description>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Convert_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if lead is converted or not</description>
        <label>Convert Lead</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>